fix: resolving bug z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#navbar {
+  z-index: 40 !important;
+}
